Correction taille slide en mode visualisation strong & em en bold pour l'impression N&B gain de place sur la slide

--- a/reveal/theme-zenika/pdf.css
+++ b/reveal/theme-zenika/pdf.css
@@ -27,3 +27,11 @@ body {
 .reveal .master-toc-return {
   display: none;
 }
+
+.reveal em {
+	font-weight: bold;
+}
+
+.reveal strong {
+	font-weight: bold;
+}
