handle page break as for #14

--- a/styleCahierExercice.css
+++ b/styleCahierExercice.css
@@ -16,6 +16,10 @@ body > *:last-child {
     margin-bottom: 0 !important;
 }
 
+div.pb {
+    page-break-after: always;
+}
+
 a {
     color: #4183C4;
 }
