--- a/styleCahierExercice.css
+++ b/styleCahierExercice.css
@@ -44,6 +44,7 @@ h1, h2, h3, h4, h5, h6 {
     padding: 0;
     font-weight: bold;
     -webkit-font-smoothing: antialiased;
+    font-smoothing: antialiased;
     cursor: text;
     position: relative;
 }
@@ -113,8 +114,12 @@ p, blockquote, ul, ol, dl, li, table, pre {
     margin: 15px 0;
 }
 
+p {
+    text-align: justify;
+}
+
 img {
-  max-width: 100%; 
+  max-width: 100%;
   display:block;
   margin-left:auto;
   margin-right:auto;
