--- a/reveal/theme-zenika/theme.css
+++ b/reveal/theme-zenika/theme.css
@@ -282,6 +282,12 @@ body {
   background: transparent center center no-repeat url('./images/tp15.png');
   background-size: 50%;
 }
+
+.reveal section.page-demo {
+  background: transparent center center no-repeat url('./images/demo.png');
+  background-size: 50%;
+}
+
 /*********************************************
  * LINKS
  *********************************************/
@@ -455,4 +461,10 @@ body {
   color: #a94442;
   background-color: #f2dede;
   border-color: #ebccd1;
+}
+
+/** incusion de font-awesome avec reveal : cf https://github.com/FortAwesome/Font-Awesome/pull/2131 */
+.reveal .fa {
+  font-family: 'FontAwesome';
+  font-style: normal;
 }
