--- a/reveal/theme-zenika/theme.css
+++ b/reveal/theme-zenika/theme.css
@@ -117,6 +117,12 @@ body {
  * HEADERS
  *********************************************/
 
+.reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
+  hyphens: none;
+  -ms-hyphens: none;
+  -webkit-hyphens: none;
+}
+
 .reveal h1 {
   margin-top: 5%;
   width: 600px;
