--- a/reveal/theme-zenika/theme.css
+++ b/reveal/theme-zenika/theme.css
@@ -518,3 +518,12 @@ body {
   font-family: 'FontAwesome';
   font-style: normal;
 }
+
+/** contournement bug chrome et ff qui affichent un fond noir lors du passage en fullscreen : cf https://github.com/hakimel/reveal.js/issues/1386#issuecomment-225379825 */
+html:-webkit-full-screen-ancestor {
+  background-color: inherit;
+}
+
+html {
+  background-color: #fff !important;
+}
