--- a/styleCahierExercice.css
+++ b/styleCahierExercice.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Helvetica, arial, sans-serif;
+    font-family: arial, sans-serif;
     font-size: 14px;
     line-height: 1.6;
     padding-top: 10px;
@@ -119,10 +119,10 @@ p {
 }
 
 img {
-  max-width: 100%;
-  display:block;
-  margin-left:auto;
-  margin-right:auto;
+    max-width: 100%;
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
 }
 
 hr {
