:hammer: use puppeteer for Chrome control
This will enable us to have simple nodejs Docker image to generate PDFs since puppeteer will install Chrome inside it, instead of having to have a Chrome Docker image.

--- a/reveal/theme-zenika/theme.css
+++ b/reveal/theme-zenika/theme.css
@@ -220,7 +220,7 @@ body {
 .slides section:first-child::after {
     color: white;
     font-size: 13px;
-    content: "VERSION";
+    content: "2017-09-01#b550551";
     position: absolute;
     bottom: 5mm;
     right: 5mm;
@@ -247,7 +247,7 @@ body {
 }
 
 .reveal section.page-questions {
-  background: transparent center center no-repeat url('./images/questions.svg');
+  background: white center center no-repeat url('./images/questions.svg');
   background-size: 60%;
 }
 
