:lipstick: White background for tp slices (PDF)

--- a/reveal/theme-zenika/theme.css
+++ b/reveal/theme-zenika/theme.css
@@ -258,7 +258,7 @@ body {
   height: 80%;
 }
 .reveal section [class^="page-tp"] {
-  background: transparent center center no-repeat url('./images/tp.svg');
+  background: white center center no-repeat url('./images/tp.svg');
   background-size: 60%;
 
 }
