--- a/reveal/theme-zenika/theme.css
+++ b/reveal/theme-zenika/theme.css
@@ -258,12 +258,12 @@ body {
   height: 80%;
 }
 .reveal section [class^="page-tp"] {
-  background: transparent center center no-repeat url('./images/tp.svg');
+  background: white center center no-repeat url('./images/tp.svg');
   background-size: 60%;
 
 }
 .reveal section [class^="page-tp"]:after {
-  display: inline-block;
+  display: block;
   color: #af1e3a;
   font-size: 50px;
   font-weight: bold;
