feat #204 - Change TP to Lab in generated slides

--- a/reveal/theme-zenika/theme.css
+++ b/reveal/theme-zenika/theme.css
@@ -274,94 +274,94 @@ body {
 }
 
 .reveal section.page-tp1:after {
-  content: "TP1";
+  content: "Lab 1";
 }
 .reveal section.page-tp2:after {
-  content: "TP2";
+  content: "Lab 2";
 }
 .reveal section.page-tp3:after {
-  content: "TP3";
+  content: "Lab 3";
 }
 .reveal section.page-tp4:after {
-  content: "TP4";
+  content: "Lab 4";
 }
 .reveal section.page-tp5:after {
-  content: "TP5";
+  content: "Lab 5";
 }
 .reveal section.page-tp6:after {
-  content: "TP6";
+  content: "Lab 6";
 }
 .reveal section.page-tp7:after {
-  content: "TP7";
+  content: "Lab 7";
 }
 .reveal section.page-tp8:after {
-  content: "TP8";
+  content: "Lab 8";
 }
 .reveal section.page-tp9:after {
-  content: "TP9";
+  content: "Lab 9";
 }
 .reveal section.page-tp10:after {
-  content: "TP10";
+  content: "Lab 10";
 }
 .reveal section.page-tp11:after {
-  content: "TP11";
+  content: "Lab 11";
 }
 .reveal section.page-tp12:after {
-  content: "TP12";
+  content: "Lab 12";
 }
 .reveal section.page-tp13:after {
-  content: "TP13";
+  content: "Lab 13";
 }
 .reveal section.page-tp14:after {
-  content: "TP14";
+  content: "Lab 14";
 }
 .reveal section.page-tp15:after {
-  content: "TP15";
+  content: "Lab 15";
 }
 .reveal section.page-tp16:after {
-  content: "TP16";
+  content: "Lab 16";
 }
 .reveal section.page-tp17:after {
-  content: "TP17";
+  content: "Lab 17";
 }
 .reveal section.page-tp18:after {
-  content: "TP18";
+  content: "Lab 18";
 }
 .reveal section.page-tp19:after {
-  content: "TP19";
+  content: "Lab 19";
 }
 .reveal section.page-tp20:after {
-  content: "TP20";
+  content: "Lab 20";
 }
 .reveal section.page-tp21:after {
-  content: "TP21";
+  content: "Lab 21";
 }
 .reveal section.page-tp22:after {
-  content: "TP22";
+  content: "Lab 22";
 }
 .reveal section.page-tp23:after {
-  content: "TP23";
+  content: "Lab 23";
 }
 .reveal section.page-tp24:after {
-  content: "TP24";
+  content: "Lab 24";
 }
 .reveal section.page-tp25:after {
-  content: "TP25";
+  content: "Lab 25";
 }
 .reveal section.page-tp26:after {
-  content: "TP26";
+  content: "Lab 26";
 }
 .reveal section.page-tp27:after {
-  content: "TP27";
+  content: "Lab 27";
 }
 .reveal section.page-tp28:after {
-  content: "TP28";
+  content: "Lab 28";
 }
 .reveal section.page-tp29:after {
-  content: "TP29";
+  content: "Lab 29";
 }
 .reveal section.page-tp30:after {
-  content: "TP30";
+  content: "Lab 30";
 }
 
 .reveal section.page-demo {
