--- a/reveal/theme-zenika/theme.css
+++ b/reveal/theme-zenika/theme.css
@@ -1,29 +1,4 @@
 @font-face {
-  font-family: 'Roboto';
-  src: url('fonts/Roboto/Roboto-Regular.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto Light';
-  src: url('fonts/Roboto/Roboto-Light.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: "Architect's Daughter";
-  src: url('fonts/ArchitectsDaughter/ArchitectsDaughter.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'OpenSans Bold';
-  src: url("fonts/Open_sans/OpenSans-Bold.ttf") format("truetype");
-}
-
-@font-face {
-  font-family: 'OpenSans Regular';
-  src: url("fonts/Open_sans/OpenSans-Regular.ttf") format("truetype");
-}
-
-@font-face {
   font-family: 'Inconsolata';
   src: url("fonts/Inconsolata/Inconsolata-Regular.ttf") format("truetype");
 }
@@ -34,10 +9,11 @@
 
 body {
   background: white;
+  --zenika-red: #b30c37;
 }
 
 .reveal {
-  font-family: 'Arial', sans-serif;
+  font-family: 'Calibri', sans-serif;
   font-size: 28px;
   font-weight: normal;
   color: #333333;
@@ -64,13 +40,6 @@ body {
   height: 650px;
 }
 
-.reveal .slides h2:after {
-  content: url('images/zenika-logo-small.png');
-  float: right;
-  margin-top: -14px;
-  margin-right: 20px;
-}
-
 .reveal .slide-background {
   background-size: contain;
 }
@@ -93,8 +62,8 @@ body {
 .reveal .slides table {
   margin: 15px 0;
   box-shadow: none;
-  border: 1px solid #b30c37;
-  border-left: 5px solid #b30c37;
+  border: 1px solid var(--zenika-red);
+  border-left: 5px solid var(--zenika-red);
   border-collapse: collapse;
 }
 .reveal .slides table tr td {
@@ -102,7 +71,7 @@ body {
 }
 .reveal .slides table tr th {
   border: 1px solid #AAAAAA;
-  border-bottom: 5px solid #b30c37;
+  border-bottom: 5px solid var(--zenika-red);
 /*  background-color: #AAAAAA;*/
   color : #000000;
 }
@@ -118,6 +87,8 @@ body {
  *********************************************/
 
 .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
+  font-family: 'Calibri Light';
+  text-transform: uppercase;
   hyphens: none;
   -ms-hyphens: none;
   -webkit-hyphens: none;
@@ -127,23 +98,25 @@ body {
   margin-top: 5%;
   width: 600px;
   float: right;
-  color: #b30c37;
   text-align: right;
-  font-family: "OpenSans Bold", sans-serif;
-  font-size: 50px;
+  font-size: 40pt;
   line-height: 130%;
+}
+
+.reveal h1::before {
+  background-image: url('./images/zenia-logo-white-shadow-no-text.png');
+  background-size: cover;
+  width: 200px;
+  height: 200px;
+  content: '';
 }
 
 .reveal h2,
 .reveal h3 {
-  margin: 0 -40px;
-  padding: 40px 0 40px 20px;
-  color: #b30c37;
+  margin: 50px 10px;
+  padding: 0;
   text-align: left;
-  font-family: "OpenSans Bold", sans-serif;
-  font-size: 40px;
-  font-weight: bold;
-  letter-spacing: 0.02em;
+  font-size: 40pt;
 }
 
 .reveal h2 small,
@@ -156,12 +129,12 @@ body {
  *********************************************/
 
 .reveal em {
-  color: #b30c37;
+  color: var(--zenika-red);
   font-style: normal;
 }
 
 .reveal strong {
-  color: #b30c37;
+  color: var(--zenika-red);
   font-style: italic;
   font-weight: normal;
 }
@@ -171,7 +144,7 @@ body {
 }
 
 .reveal code {
-  color: #b30c37;
+  color: var(--zenika-red);
 }
 
 .reveal blockquote p:first-child, .reveal blockquote p:last-child {
@@ -190,8 +163,8 @@ body {
 .reveal pre {
   margin: 15px 0;
   box-shadow: none;
-  border: 1px solid #b30c37;
-  border-left: 5px solid #b30c37;
+  border-left: 1px solid var(--zenika-red);
+  padding-left: 10px;
   width:100%;
   white-space: pre-wrap;
 }
@@ -210,7 +183,10 @@ body {
 }
 
 .slides section > section:not([class^=page-]) {
-  background: transparent no-repeat url('./images/slide-background.svg');
+  background-image: url('./images/zenika-triangles-4.png'), url('./images/zenika-logo-red-shadow-no-text.png');
+  background-position: left top, right 5% bottom 5%;
+  background-repeat: no-repeat, no-repeat;
+  background-size: auto, 100px 100px;
 }
 
 /*********************************************
@@ -226,10 +202,6 @@ body {
     right: 5mm;
 }
 
-.reveal section.page-title {
-  background: #af1e3a no-repeat url('./images/slide-background-white.svg');
-}
-
 .reveal section.page-title h1 {
   height: 90%;
   display: flex;
@@ -238,7 +210,6 @@ body {
   justify-content: center;
   margin: auto;
   text-align: center;
-  color: white;
   float: none;
 }
 
@@ -374,24 +345,20 @@ body {
  *********************************************/
 
 .reveal a:not(.image) {
-  color: #b30c37;
+  color: var(--zenika-red);
   text-decoration: none;
-  -webkit-transition: color .15s ease;
-  -moz-transition: color .15s ease;
-  -ms-transition: color .15s ease;
-  -o-transition: color .15s ease;
   transition: color .15s ease;
 }
 
 .reveal a:not(.image):hover {
-  color: #b30c37;
+  color: var(--zenika-red);
   text-shadow: none;
   border: none;
 }
 
 .reveal .roll span:after {
   color: white;
-  background: #b30c37;
+  background: var(--zenika-red);
 }
 
 .reveal .slides .toc a {
@@ -425,38 +392,38 @@ body {
 
 .reveal .controls div.navigate-left,
 .reveal .controls div.navigate-left.enabled {
-  border-right-color: #b30c37;
+  border-right-color: var(--zenika-red);
 }
 
 .reveal .controls div.navigate-right,
 .reveal .controls div.navigate-right.enabled {
-  border-left-color: #b30c37;
+  border-left-color: var(--zenika-red);
 }
 
 .reveal .controls div.navigate-up,
 .reveal .controls div.navigate-up.enabled {
-  border-bottom-color: #b30c37;
+  border-bottom-color: var(--zenika-red);
 }
 
 .reveal .controls div.navigate-down,
 .reveal .controls div.navigate-down.enabled {
-  border-top-color: #b30c37;
+  border-top-color: var(--zenika-red);
 }
 
 .reveal .controls div.navigate-left.enabled:hover {
-  border-right-color: #b30c37;
+  border-right-color: var(--zenika-red);
 }
 
 .reveal .controls div.navigate-right.enabled:hover {
-  border-left-color: #b30c37;
+  border-left-color: var(--zenika-red);
 }
 
 .reveal .controls div.navigate-up.enabled:hover {
-  border-bottom-color: #b30c37;
+  border-bottom-color: var(--zenika-red);
 }
 
 .reveal .controls div.navigate-down.enabled:hover {
-  border-top-color: #b30c37;
+  border-top-color: var(--zenika-red);
 }
 
 /*********************************************
@@ -468,11 +435,7 @@ body {
 }
 
 .reveal .progress span {
-  background: #b30c37;
-  -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  -ms-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  -o-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+  background: var(--zenika-red);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
 }
 
