--- a/reveal/theme-zenika/theme.css
+++ b/reveal/theme-zenika/theme.css
@@ -9,11 +9,22 @@
 
 body {
   background: white;
+  --content-font-family: 'Calibri', sans-serif;
+  --header-font-family: 'Calibri Light', var(--content-font-family);
+  --table-font-family: 'Calibri Light', var(--content-font-family);
+  --code-font-family: 'Inconsolata', monospace;
   --zenika-red: #b30c37;
+  --grey: #aaaaaa;
+  --default-border-size: 1px;
+  --default-border: var(--default-border-size) solid var(--zenika-red);
+  --table-primary-borders: var(--default-border);
+  --table-secondary-borders: var(--default-border-size) solid var(--grey);
+  --content-block-vertical-margin: 15px;
+  --footer-vertical-margin: 15px;
 }
 
 .reveal {
-  font-family: 'Calibri', sans-serif;
+  font-family: var(--content-font-family);
   font-size: 28px;
   font-weight: normal;
   color: #333333;
@@ -29,7 +40,7 @@ body {
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  padding: 0 70px;
+  padding: 0 85px;
 }
 
 .reveal .slides section section {
@@ -50,30 +61,28 @@ body {
   text-shadow: none;
 }
 
-.reveal .slides table, .reveal .slides table th, .reveal .slides table td {
-  border: 1px solid #696969;
-  border-collapse: collapse;
-}
-
 .reveal .slides table th, .reveal .slides table td {
   padding: 0px 10px;
 }
 
 .reveal .slides table {
-  margin: 15px 0;
-  box-shadow: none;
-  border: 1px solid var(--zenika-red);
-  border-left: 5px solid var(--zenika-red);
+  margin: var(--content-block-vertical-margin) 0;
+  border-left: var(--table-primary-borders);
   border-collapse: collapse;
+  font-family: var(--table-font-family);
 }
+
+.reveal .slides table th {
+  font-weight: normal;
+}
+
 .reveal .slides table tr td {
-  border: 1px solid #AAAAAA;
+  border: var(--table-secondary-borders);
 }
+
 .reveal .slides table tr th {
-  border: 1px solid #AAAAAA;
-  border-bottom: 5px solid var(--zenika-red);
-/*  background-color: #AAAAAA;*/
-  color : #000000;
+  border: var(--table-secondary-borders);
+  border-bottom: var(--table-primary-borders);
 }
 
 .reveal .slides table.no-border,
@@ -87,7 +96,7 @@ body {
  *********************************************/
 
 .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
-  font-family: 'Calibri Light';
+  font-family: var(--header-font-family);
   text-transform: uppercase;
   hyphens: none;
   -ms-hyphens: none;
@@ -113,7 +122,7 @@ body {
 
 .reveal h2,
 .reveal h3 {
-  margin: 50px 10px;
+  margin: 50px 0;
   padding: 0;
   text-align: left;
   font-size: 40pt;
@@ -161,7 +170,7 @@ body {
  *********************************************/
 
 .reveal pre {
-  margin: 15px 0;
+  margin: var(--content-block-vertical-margin) 0;
   box-shadow: none;
   border-left: 1px solid var(--zenika-red);
   padding-left: 10px;
@@ -172,12 +181,13 @@ body {
 .reveal h2 + pre,
 .reveal h3 + pre { /* Whole-slide code block */
   border: none;
+  padding-left: 0;
 }
 
 .reveal pre > code, .reveal .code {
   color: black;
   max-height: none;
-  font-family: 'Inconsolata', monospace;
+  font-family: var(--code-font-family);
   font-size: 24px;
   line-height: normal;
 }
@@ -235,7 +245,7 @@ body {
 }
 .reveal section [class^="page-tp"]:after {
   display: block;
-  color: #af1e3a;
+  color: var(--zenika-red);
   font-size: 50px;
   font-weight: bold;
   width: 100%;
@@ -445,14 +455,14 @@ body {
 
 .reveal footer, .reveal .slides footer {
   position: absolute;
-  bottom: 15px;
+  bottom: var(--footer-vertical-margin);
   font-size: 12px;
   opacity: 0.5;
 }
 
 .reveal .master-toc-return {
   left: 15px;
-  bottom: 15px;
+  bottom: var(--footer-vertical-margin);
   font-size: 20px;
   z-index: 1000;
 }
@@ -473,7 +483,7 @@ body {
  *********************************************/
 
 .reveal .alert {
-  padding: 15px;
+  padding: var(--content-block-vertical-margin);
   margin-bottom: 20px;
   border: 1px solid transparent;
   border-radius: 4px;
