fix(theme.css): reinstate the VERSION placeholder

--- a/reveal/theme-zenika/theme.css
+++ b/reveal/theme-zenika/theme.css
@@ -220,7 +220,7 @@ body {
 .slides section:first-child::after {
     color: white;
     font-size: 13px;
-    content: "2017-09-01#b550551";
+    content: "VERSION";
     position: absolute;
     bottom: 5mm;
     right: 5mm;
