moving pdf css of new theme in its own file

--- a/reveal/theme-zenika/pdf.css
+++ b/reveal/theme-zenika/pdf.css
@@ -6,15 +6,21 @@ body {
   size: A4 landscape;
 }
 
-.slides section > section:not([class^=page-]),
-.slides section > section[class^=page-title] {
-  background-color: white;
+@media print {
+  .page-title ul {
+    display: none;
+  }
+}
+
+.reveal section.page-title h1 {
+  display: block;
+  padding-top: 20%;
 }
 
 .reveal .slides section section {
   height: 209mm !important;
   min-height: 209mm !important;
-  padding: 0 var(--main-content-horizontal-padding) !important;
+  padding: 0 70px !important;
 }
 
 .reveal .slides section {
@@ -26,7 +32,7 @@ body {
 }
 
 .reveal .slides pre > code {
-  font-family: var(--code-font-family) !important;
+  font-family: "Inconsolata" !important;
 }
 
 .reveal .master-toc-return {
@@ -36,4 +42,14 @@ body {
 .reveal strong,
 .reveal em {
     font-weight: bold;
+}
+
+/* Disables SVG decorations when printing to PDF because PhantomJS does not support that very well. */
+
+.slides section > section:not([class^=page-]) {
+    background: white no-repeat url('./images/slide-background.png');
+}
+
+.reveal section.page-title {
+    background: #af1e3a no-repeat url('./images/slide-background-white.png');
 }
